add pkcs11 opens flag for java security reasons